--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
       <h2>Depósitos</h2>
       <form id="form-deposito">
         <input type="text" id="nome-beneficiario" required placeholder="Nome completo do beneficiário"/>
+        <P class="error-message">
+          O nome precisa ser completo
+        </P>
         <input type="number" id="numero-conta" required placeholder="Número da conta" />
         <input type="number"  id="valor-deposito" required placeholder="Valor"/>
         <textarea id="descricao" placeholder="Descrição (opicional)"></textarea>
         <button id="btn-depositar" type="submit">DEPOSITAR</button>
       </form>
+      <p class="success-message"></p>
     </div>
   </body>
   <script src="main.js"></script>
