--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercicio EBAC</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header><h1>Area de Exercicios</h1></header>
@@ -24,11 +25,9 @@
         id="campo-b"
         placeholder="Insira um numero aqui"
       />
-      <p class="error-msg">
-        O nome precisa ser completo
       </p>
       <button id="enviar" type="submit"">Enviar</button>
-      <p class="success"></p>
+      <p class="msgResposta"></p>
     </form>
   </body>
   <script src="/Exercise/main.js"></script>
